new values in song model + env configured
