# src/controllers/song.js
@@ -51,13 +51,16 @@ const deleteSong = async (req, res) => {
 const updateSong = async (req, res) => {
 
     try {
-        const { title, album, tabs } = req.body;
+        const { title, album, key, difficulty, spotify_url, tabs } = req.body;
 
         const song = await Song.findById(req.params.id);
         if (!song) return res.status(404).json({ error: 'Artist not found' });
     
         song.title = title;
         song.album = album;
+        song.key = key;
+        song.difficulty = difficulty;
+        song.spotify_url = spotify_url;
         song.tabs = tabs;
 
         const updatedSong = await song.save();
